--- a/style.css
+++ b/style.css
@@ -148,3 +148,22 @@ if (candyIsPoison) {
 // When game is won:
 playSound('sound-win');
 */
+
+/* Avatars container styles */
+.avatar-selection {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.avatar-display {
+  margin-top: 5px;
+}
+
+.avatar-display img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid #ff69b4;
+}
